<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FormActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="@dimen/margin24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_no_image" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_question_text_input_layout"
        android:layout_margin="@dimen/margin16"
        app:layout_constraintTop_toBottomOf="@+id/image_view">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_response_text_input_layout"
        android:layout_margin="@dimen/margin16"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_question">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/delete"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin16"
        android:visibility="invisible"
        android:text="@string/text_button_delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_response"/>

    <ProgressBar
        android:id="@+id/photo_detail_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginEnd="@dimen/margin16"
        android:indeterminateTint="@android:color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/photo_detail_progress_bar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:background="@drawable/loader_background"
        android:text="@string/photo_progress_bar_text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_detail_progress_bar"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/description_add_button" />

</androidx.constraintlayout.widget.ConstraintLayout>